--- a/assets/css/shared_cloud.css
+++ b/assets/css/shared_cloud.css
@@ -10,7 +10,7 @@
 }
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box;f
 }
 
 body {
@@ -32,6 +32,9 @@ body {
     flex-direction: column;
     padding: 30px;
     justify-content: space-between;
+    /* AJUSTE PARA LANDSCAPE: */
+    height: 100vh;
+    overflow-y: auto; /* Se a tela for baixa, a barra lateral ganha scroll próprio */
 }
 
 .brand {
@@ -83,12 +86,19 @@ body {
     font-weight: 600;
 }
 
+/* Container para os dois perfis (DH e CS) */
+.profiles-area {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 20px;
+    border-top: 1px solid var(--border);
+}
+
 .user-profile {
     display: flex;
     align-items: center;
     gap: 10px;
-    padding-top: 20px;
-    border-top: 1px solid var(--border);
 }
 
 .avatar {
@@ -420,8 +430,7 @@ header {
 
 /* === AJUSTES PARA CELULAR E TABLET (Responsividade) === */
 /* === CORREÇÃO MOBILE DEFINITIVA (REVISADA) === */
-@media (max-width: 768px) {
-
+@media (max-width: 768px) or (max-height: 500px) {
     /* --- LAYOUT DA NUVEM --- */
     body {
         flex-direction: column;
